--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
  * This template takes a single argument, a String containing a
  * message to display.
  *@
-@(message: String)
+@(size: Int, groups: Seq[(String, (Int, Int))])
 
 @*
  * Call the `main` template with two arguments. The first
@@ -11,10 +11,19 @@
  *@
 @main("Welcome to Play") {
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @welcome(message, style = "scala")
-
+ <h1>@size видов товаров в наличии</h1>
+ <table class="table table-hover">
+  <thead>
+  <th>Вид пива</th>
+  <th>Видов в наличии</th>
+  <th>Бутылок в наличии</th>
+  </thead>
+ @for((group, stat) <- groups) {
+ <tr>
+  <td>@group</td>
+  <td>@stat._1</td>
+  <td>@stat._2</td>
+ </tr>
+ }
+ </table>
 }
