--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,13 +11,17 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+
+        @*<script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>*@
     </head>
     <body>
         @* And here's where we render the `Html` object containing
          * the page content. *@
+        <div class="container">
         @content
+        </div>
     </body>
 </html>
