Cleanup and version bump

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Welcome to Play") {
+@main("Планирование закупок") {
  <h2>Планирование закупок</h2>
  <div class="container-fluid">
    <ul class="nav nav-pills">
