--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -50,6 +50,7 @@
                             </ul>
                         </li>
                         <li><a href="@routes.SalesController.perEmployee()" class="active">Продажи</a></li>
+                        <li><a href="@routes.EgaisController.stock()">Егаис</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
